edited background image

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -59,11 +60,11 @@
 
         <div class="text-vertical-center">
             <img class="img-responsive img-circle center-block grow" src="img/default-user.jpg" width="200px" alt="">
-            <h1>John Doe</h1>
-            <h3>Software Developer</h3>
+            <h1>Phillip Lagoc</h1>
+            <h3>Machine Learning Enthusiast</h3>
             <br>
-            <a target="_blank" href="http://example.com/"><span class="fa fa-linkedin-square fa-4x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank" href="http://example.com/"><span class="fa fa-github fa-4x" aria-hidden="true"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
             <br>
             <br>
@@ -80,7 +81,6 @@
             <div class="row">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
-                    <i class="fa fa-user-circle fa-4x"></i>
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
@@ -134,10 +134,9 @@
                     <h2><span>University of California, San Diego</span><br>
                     <small>Class of 2020</small><br>
                     <small>Cognitive Science, specialized in Machine Learning and Neural Computation</small>
+                    <small>Coursework: </small>
                     </h2>
-                    <p class="lead">
-                      Coursework:
-                    </p>
+                   
                 </div>
                 <div class="col-lg-3"></div>
             </div>
