Finished education section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="text-vertical-center">
-            <img class="img-responsive img-circle center-block grow" src="img/default-user.jpg" width="200px" alt="">
+            <img class="img-responsive img-circle center-block grow" src="img/profile.jpg" width="200px" alt="">
             <h1>Phillip Lagoc</h1>
             <h3>Machine Learning Enthusiast</h3>
             <br>
@@ -84,15 +84,7 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt eu mi a sodales. Ut turpis nunc, sagittis at leo ut, dictum fringilla orci. Integer nec augue malesuada, ullamcorper risus nec, blandit augue.
-                    </p>
-
-                    <p class="lead">
-                      Nam porta, enim sit amet tempor tempor, est lacus mollis neque, sit amet molestie ipsum risus sed purus. Nullam dapibus nibh urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut facilisis, urna a pulvinar suscipit, turpis arcu facilisis leo, nec pharetra justo augue ut orci.
-                    </p>
-
-                    <p class="lead">
-                      Praesent vel maximus dui. Nulla eleifend, lectus eget scelerisque dignissim, velit ex mattis neque, et lobortis velit quam eget est. Cras eu purus et odio placerat pellentesque.
+                      I am a third-year Cognitive Science student at the University of California, San Diego looking for an internship for the 2018 school year and for Summer 2019.
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
@@ -116,25 +108,29 @@
     <!-- Education begins -->
     <section id="education" class="education">
         <div class="container">
-           <!--  <div class="row" id="educationheading">
+            <div class="row" id="educationheading">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
-                <i class="fa fa-group fa-4x"></i>
+                <!-- <i class="fa fa-group fa-4x"></i> -->
+                <i class="fa fa-graduation-cap fa-4x" aria-hidden="true"></i>
                 <h2>Education</h2>
                 <hr>
                 </div>
                 <div class="col-lg-3"></div>
-            </div> -->
+            </div>
 
             <div class="row" id="school">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
-                    <a target="_blank" href="http://example.com/">
+                    <a target="_blank" href="https://ucsd.edu/">
                     <img class="img-responsive img-circle center-block grow" src="img/geisel.jpg" width="160px" alt=""></a>
                     <h2><span>University of California, San Diego</span><br>
                     <small>Class of 2020</small><br>
-                    <small>Cognitive Science, specialized in Machine Learning and Neural Computation</small>
+                    <small>Cognitive Science - Machine Learning and Neural Computation</small><br>
                     <small>Coursework: </small>
+                    <p class="lead">
+                      Linear Algebra, Probability and Statistics, Data Structures and Object Oriented Design, Vector Calculus, Discrete Mathematics, Data Analysis and Modeling, Machine Learning
+                    </p>
                     </h2>
                    
                 </div>
@@ -179,7 +175,7 @@
                 <div class="col-lg-6 text-center">
                     <a target="_blank" href="http://example.com/">
                     <img class="img-responsive img-circle center-block grow" src="img/default-company.jpg" width="160px" alt=""></a>
-                    <h2><span>Company Name</span><br>
+                    <h2><span>Language Comprehension Lab</span><br>
                     <small>Location</small><br>
                     <small>Designation</small><br>
                     <small>Duration</small>
