--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="" onclick=$("#menu-close").click();>John Doe</a>
+                <a href="" onclick=$("#menu-close").click();>Phillip Lagoc</a>
             </li>
             <li>
                 <a href="#home" onclick=$("#menu-close").click();>Home</a>
@@ -77,7 +77,7 @@
             <br>
             <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x" title="My Github"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="./Resume.pdf" download="Phillip-Lagoc-Resume"><span class="fa fa-file fa-4x" aria-hidden="true" title="Download Resume"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My LinkedIn"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My LinkedIn"></span></a>
             <br>
             <br>
             <br>
