Fixed titles for Github button, LinkedIn button

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <h1>Phillip Lagoc</h1>
             <h3>Machine Learning Enthusiast</h3>
             <br>
-            <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x" title="My Github"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x" title="My LinkedIn"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="./Resume.pdf" download="Phillip-Lagoc-Resume"><span class="fa fa-file fa-4x" aria-hidden="true" title="Download Resume"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My LinkedIn"></span></a>
+            <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My Github"></span></a>
             <br>
             <br>
             <br>
