--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3>Machine Learning Enthusiast</h3>
             <br>
             <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x" title="My LinkedIn"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a target="_blank" href="./Resume.pdf" download="Phillip-Lagoc-Resume"><span class="fa fa-file fa-4x" aria-hidden="true" title="Download Resume"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <a target="_blank" href="./Resume.pdf" download="Phillip-Lagoc-Resume"><span class="fa fa-file fa-4x" aria-hidden="true" title="Download Resume"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My Github"></span></a>
             <br>
             <br>
@@ -100,6 +100,12 @@
                     <hr>
                     <p class="lead">
                       I am a third-year Cognitive Science student at the University of California, San Diego looking for an internship for the 2018 school year and for Summer 2019.
+                    </p>
+                    <p>
+                      Download my resume <a href="./Resume.pdf">here</a>.
+                    </p>
+                    <p>
+                      Access my tutorial on Naive Bayes <a href="./blogs/Naive Bayes/naive_bayes_index.html">here</a>.
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
