added more stuff to tiddler for logisticreg, added sources to use

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                     <p>
                       Access my tutorial on Naive Bayes <a href="./blogs/Naive Bayes/naive_bayes_index.html">here</a>.
                     </p>
+                   <!--  <p>
+                        I have also decided to keep my notes on the various ML stuff I come across <a href="./tiddlywikilocations/index.html">here</a>.
+                        This online notebook serves as a repository of all things ML, Data Science, and Statistics. 
+                    </p> -->
                 </div>
                 <div class="col-lg-3"></div>
             </div>
