added Titanic Code to projects

--- a/index.html
+++ b/index.html
@@ -284,32 +284,46 @@
             <br>
 
             <div class="row">
-              <div class="col-lg-2 text-center">
-              </div>
+                <div class="col-lg-2 text-center">
+                </div>
 
-              <div class="col-lg-4 text-center">
-                  <a target="_blank" href="https://github.com/philliplagoc/JavaFX-Pong">
-                  <img class="img-responsive img-circle center-block grow" src="img/pong.png" width="150px" alt=""></a>
-                  <h2><span>Pong</span><br>
-                  <small>Aug. 2017 - Aug. 2017</small><br>
-                  </h2>
-                  <p class="lead">
-                    Using JavaFX, I developed a clone of Pong in the span of a week. I personally created the GUI and game logic, 
-                    and also implemented two-player functionality.
-                  </p>
-              </div>
+                <div class="col-lg-4 text-center">
+                    <a target="_blank" href="./Titanic.html">
+                    <img class="img-responsive img-circle center-block grow" src="img/titanic.jpg" width="150px" alt=""></a>
+                    <h2><span>Kaggle - Titanic Challenge</span><br>
+                    <small>Sept. 2018 - Dec. 2018</small><br>
+                    </h2>
+                    <p class="lead">
+                        This is my submission for Kaggle's Titanic Machine Learning challenge. With my latest submission, I have received a score of 0.76. 
+                        Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Titanic">github</a>.
+                    </p>
+                </div>
 
-              <div class="col-lg-4 text-center">
-                  <a target="_blank" href="https://github.com/philliplagoc/JavaFX-Frogger">
-                  <img class="img-responsive img-circle center-block grow" src="img/frogger.png" width="150px" alt=""></a>
-                  <h2><span>Frogger</span><br>
-                  <small>Sept. 2017 - Sept. 2017</small><br>
-                  </h2>
-                  <p class="lead">
-                    Again using JavaFX, I developed a clone of Frogger. To make game development easier for myself, I created 
-                    and incorporated my own game engine, which facilitated sprite creation and hit-box detection.
-                  </p>
-              </div>
+
+                <div class="col-lg-4 text-center">
+                    <a target="_blank" href="https://github.com/philliplagoc/JavaFX-Pong">
+                    <img class="img-responsive img-circle center-block grow" src="img/pong.png" width="150px" alt=""></a>
+                    <h2><span>Pong</span><br>
+                    <small>Aug. 2017 - Aug. 2017</small><br>
+                    </h2>
+                    <p class="lead">
+                        Using JavaFX, I developed a clone of Pong in the span of a week. I personally created the GUI and game logic, 
+                        and also implemented two-player functionality.
+                    </p>
+                </div>
+                
+
+                <div class="col-lg-4 text-center">
+                    <a target="_blank" href="https://github.com/philliplagoc/JavaFX-Frogger">
+                    <img class="img-responsive img-circle center-block grow" src="img/frogger.png" width="150px" alt=""></a>
+                    <h2><span>Frogger</span><br>
+                    <small>Sept. 2017 - Sept. 2017</small><br>
+                    </h2>
+                    <p class="lead">
+                        Again using JavaFX, I developed a clone of Frogger. To make game development easier for myself, I created 
+                        and incorporated my own game engine, which facilitated sprite creation and hit-box detection.
+                    </p>
+                </div>
 
               <div class="col-lg-2 text-center">
               </div>
