redirected user to appropriate page when clicking picture

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 </div>
 
                 <div class="col-lg-4 text-center">
-                    <a target="_blank" href="./Titanic.html">
+                    <a target="_blank" href="./blogs/Titanic.html">
                     <img class="img-responsive img-circle center-block grow" src="img/titanic.jpg" width="150px" alt=""></a>
                     <h2><span>Kaggle - Titanic Challenge</span><br>
                     <small>Sept. 2018 - Dec. 2018</small><br>
