changed Titanic.html filed to reflect latest changes

--- a/blogs/Titanic.html
+++ b/blogs/Titanic.html
@@ -11788,7 +11788,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[81]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">matplotlib</span> inline
@@ -13004,8 +13004,8 @@ Miss       185
 Mrs        125
 Master      40
 Dr           7
-Rev          6
 Royal        6
+Rev          6
 Officer      5
 Name: Title, dtype: int64</pre>
 </div>
@@ -13044,8 +13044,8 @@ Name: Title, dtype: int64</pre>
 Miss        79
 Mrs         72
 Master      21
-Rev          2
 Officer      2
+Rev          2
 Dr           1
 Royal        1
 Name: Title, dtype: int64</pre>
@@ -13111,67 +13111,67 @@ Name: Title, dtype: int64</pre>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>347082                7
-CA. 2343              7
-1601                  7
-347088                6
-3101295               6
-CA 2144               6
-382652                5
-S.O.C. 14879          5
-347077                4
-PC 17757              4
-W./C. 6608            4
-113760                4
-2666                  4
-17421                 4
-LINE                  4
-113781                4
-4133                  4
-19950                 4
-349909                4
-110152                3
-PC 17760              3
-248727                3
-345773                3
-SC/Paris 2123         3
-PC 17755              3
-PC 17582              3
-230080                3
-24160                 3
-239853                3
-13502                 3
-                     ..
-349201                1
-34218                 1
-13049                 1
-A.5. 11206            1
-3101296               1
-370376                1
-113509                1
-376566                1
-STON/O 2. 3101293     1
-347074                1
-4134                  1
-367231                1
-349222                1
-C.A. 17248            1
-113510                1
-SOTON/O.Q. 3101312    1
-16988                 1
-7552                  1
-28424                 1
-STON/O 2. 3101288     1
-19988                 1
-SOTON/OQ 392090       1
-365226                1
-349208                1
-SW/PP 751             1
-350035                1
-248723                1
-A/5. 851              1
-A/4. 20589            1
-113055                1
+<pre>CA. 2343             7
+347082               7
+1601                 7
+3101295              6
+347088               6
+CA 2144              6
+S.O.C. 14879         5
+382652               5
+113781               4
+PC 17757             4
+113760               4
+19950                4
+349909               4
+17421                4
+W./C. 6608           4
+LINE                 4
+2666                 4
+4133                 4
+347077               4
+371110               3
+PC 17572             3
+248727               3
+13502                3
+347742               3
+C.A. 34651           3
+24160                3
+363291               3
+PC 17755             3
+110152               3
+C.A. 31921           3
+                    ..
+A/5 3902             1
+SOTON/OQ 3101316     1
+315097               1
+36568                1
+4137                 1
+315098               1
+315089               1
+17465                1
+220367               1
+349253               1
+2669                 1
+2689                 1
+STON/O 2. 3101285    1
+36967                1
+A/4 45380            1
+347468               1
+347081               1
+240929               1
+2926                 1
+C 7075               1
+3101265              1
+3101281              1
+312993               1
+113807               1
+349231               1
+14973                1
+223596               1
+11813                1
+PC 17759             1
+2683                 1
 Name: Ticket, Length: 681, dtype: int64</pre>
 </div>
 
@@ -14127,7 +14127,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>0.8258426966292135</pre>
+<pre>0.8412921348314607</pre>
 </div>
 
 </div>
@@ -14160,7 +14160,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>{&#39;C&#39;: 0.5, &#39;penalty&#39;: &#39;l1&#39;}</pre>
+<pre>{&#39;C&#39;: 1.5, &#39;penalty&#39;: &#39;l1&#39;}</pre>
 </div>
 
 </div>
@@ -14205,7 +14205,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Logistic Regression Accuracy:  0.8268156424581006
+<pre>Logistic Regression Accuracy:  0.8044692737430168
 </pre>
 </div>
 </div>
@@ -14292,7 +14292,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>0.7963483146067416</pre>
+<pre>0.8117977528089888</pre>
 </div>
 
 </div>
@@ -14325,7 +14325,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>{&#39;n_neighbors&#39;: 6}</pre>
+<pre>{&#39;n_neighbors&#39;: 10}</pre>
 </div>
 
 </div>
@@ -14370,7 +14370,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>K-Nearest Neighbors Accuracy:  0.8324022346368715
+<pre>K-Nearest Neighbors Accuracy:  0.7932960893854749
 </pre>
 </div>
 </div>
@@ -14464,7 +14464,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>0.8132022471910112</pre>
+<pre>0.8089887640449438</pre>
 </div>
 
 </div>
@@ -14497,7 +14497,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>{&#39;criterion&#39;: &#39;gini&#39;, &#39;max_depth&#39;: 4, &#39;min_samples_split&#39;: 2}</pre>
+<pre>{&#39;criterion&#39;: &#39;entropy&#39;, &#39;max_depth&#39;: 4, &#39;min_samples_split&#39;: 3}</pre>
 </div>
 
 </div>
@@ -14542,7 +14542,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Decision Tree Classifier Accuracy:  0.8324022346368715
+<pre>Decision Tree Classifier Accuracy:  0.8100558659217877
 </pre>
 </div>
 </div>
@@ -14607,7 +14607,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>AdaBoostClassifier Accuracy:  0.8435754189944135
+<pre>AdaBoostClassifier Accuracy:  0.7877094972067039
 </pre>
 </div>
 </div>
@@ -14626,7 +14626,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[70]:</div>
+<div class="prompt input_prompt">In&nbsp;[64]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">val_accs</span><span class="o">=</span><span class="p">[]</span>
@@ -14648,7 +14648,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[72]:</div>
+<div class="prompt input_prompt">In&nbsp;[65]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gnb</span> <span class="o">=</span> <span class="n">GaussianNB</span><span class="p">()</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_val</span><span class="p">,</span> <span class="n">y_train_val</span><span class="p">)</span>
@@ -14671,7 +14671,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>GaussianNB Accuracy:  0.7597765363128491
+<pre>GaussianNB Accuracy:  0.7988826815642458
 </pre>
 </div>
 </div>
@@ -14690,7 +14690,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[74]:</div>
+<div class="prompt input_prompt">In&nbsp;[66]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">C_list</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.01</span><span class="p">,</span> <span class="mf">0.1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mf">1.5</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">]</span>
@@ -14712,7 +14712,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[74]:</div>
+<div class="prompt output_prompt">Out[66]:</div>
 
 
 
@@ -14737,7 +14737,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[76]:</div>
+<div class="prompt input_prompt">In&nbsp;[67]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">svc</span><span class="o">.</span><span class="n">best_score_</span>
@@ -14753,13 +14753,13 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[76]:</div>
+<div class="prompt output_prompt">Out[67]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>0.824438202247191</pre>
+<pre>0.8384831460674157</pre>
 </div>
 
 </div>
@@ -14770,7 +14770,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[77]:</div>
+<div class="prompt input_prompt">In&nbsp;[68]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">svc</span><span class="o">.</span><span class="n">best_params_</span>
@@ -14786,7 +14786,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[77]:</div>
+<div class="prompt output_prompt">Out[68]:</div>
 
 
 
@@ -14803,7 +14803,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[78]:</div>
+<div class="prompt input_prompt">In&nbsp;[69]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">svc_star</span> <span class="o">=</span> <span class="n">svc</span><span class="o">.</span><span class="n">best_estimator_</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_val</span><span class="p">,</span> <span class="n">y_train_val</span><span class="p">)</span>
@@ -14817,7 +14817,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[79]:</div>
+<div class="prompt input_prompt">In&nbsp;[70]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s1">&#39;SVM Accuracy: &#39;</span><span class="p">,</span> <span class="n">acc</span><span class="p">)</span>
@@ -14837,7 +14837,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>SVM Accuracy:  0.8547486033519553
+<pre>SVM Accuracy:  0.8100558659217877
 </pre>
 </div>
 </div>
@@ -14856,17 +14856,17 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[85]:</div>
+<div class="prompt input_prompt">In&nbsp;[71]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">voting_clf</span> <span class="o">=</span> <span class="n">VotingClassifier</span><span class="p">(</span>
     <span class="n">estimators</span><span class="o">=</span><span class="p">[</span>
-        <span class="p">(</span><span class="s1">&#39;logreg&#39;</span><span class="p">,</span> <span class="n">logreg_grid</span><span class="p">),</span>
-        <span class="p">(</span><span class="s1">&#39;knn&#39;</span><span class="p">,</span> <span class="n">knn_grid</span><span class="p">),</span>
-        <span class="p">(</span><span class="s1">&#39;dt&#39;</span><span class="p">,</span> <span class="n">dt_grid</span><span class="p">),</span>
-        <span class="p">(</span><span class="s1">&#39;adaboost&#39;</span><span class="p">,</span> <span class="n">adaboost_clf</span><span class="p">),</span>
-        <span class="p">(</span><span class="s1">&#39;gnb&#39;</span><span class="p">,</span> <span class="n">gnb</span><span class="p">),</span>
-        <span class="p">(</span><span class="s1">&#39;svc&#39;</span><span class="p">,</span> <span class="n">svc</span><span class="p">)</span>
+        <span class="p">(</span><span class="s1">&#39;logreg&#39;</span><span class="p">,</span> <span class="n">logreg_grid</span><span class="o">.</span><span class="n">best_estimator_</span><span class="p">),</span>
+        <span class="p">(</span><span class="s1">&#39;knn&#39;</span><span class="p">,</span> <span class="n">knn_grid</span><span class="o">.</span><span class="n">best_estimator_</span><span class="p">),</span>
+        <span class="p">(</span><span class="s1">&#39;dt&#39;</span><span class="p">,</span> <span class="n">dt_grid</span><span class="o">.</span><span class="n">best_estimator_</span><span class="p">),</span>
+        <span class="p">(</span><span class="s1">&#39;adaboost&#39;</span><span class="p">,</span> <span class="n">AdaBoostClassifier</span><span class="p">()),</span>
+        <span class="p">(</span><span class="s1">&#39;gnb&#39;</span><span class="p">,</span> <span class="n">GaussianNB</span><span class="p">()),</span>
+        <span class="p">(</span><span class="s1">&#39;svc&#39;</span><span class="p">,</span> <span class="n">svc</span><span class="o">.</span><span class="n">best_estimator_</span><span class="p">)</span>
     <span class="p">],</span> <span class="n">voting</span><span class="o">=</span><span class="s1">&#39;soft&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_val</span><span class="p">,</span> <span class="n">y_train_val</span><span class="p">)</span>
 </pre></div>
 
@@ -14877,7 +14877,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[86]:</div>
+<div class="prompt input_prompt">In&nbsp;[72]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">acc</span> <span class="o">=</span> <span class="n">accuracy_score</span><span class="p">(</span><span class="n">voting_clf</span><span class="o">.</span><span class="n">predict</span><span class="p">(</span><span class="n">X_test</span><span class="p">),</span> <span class="n">y_test</span><span class="p">)</span>
@@ -14898,7 +14898,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>VotingClassifier Accuracy:  0.8435754189944135
+<pre>VotingClassifier Accuracy:  0.8156424581005587
 </pre>
 </div>
 </div>
@@ -14929,7 +14929,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[87]:</div>
+<div class="prompt input_prompt">In&nbsp;[73]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">passengerId</span> <span class="o">=</span> <span class="n">test</span><span class="o">.</span><span class="n">PassengerId</span>
@@ -14966,7 +14966,7 @@ Percent of Third Class that Survived:  0.24236252545824846
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[88]:</div>
+<div class="prompt input_prompt">In&nbsp;[74]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">submission</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s1">&#39;submissions.csv&#39;</span><span class="p">)</span>
