added new resume, edited work experience to contain felicity and cpass

--- a/index.html
+++ b/index.html
@@ -189,6 +189,49 @@
                 <div class="col-lg-3"></div>
             </div>
 
+
+            <div class="row" id="company">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank" href="http://cpass.ucsd.edu/">
+                    <img class="img-responsive img-circle center-block grow" src="img/cpass-logo.JPG" width="160px" alt=""></a>
+                    <h2><span>Center for Peace and Security Studies</span><br>
+                    <small>UC San Diego</small><br>
+                    <small>Undergraduate Research Assistant</small><br>
+                    <small>Jan. 2019 - Present</small>
+                    </h2>
+                    <p class="lead">
+                      Currently, I am using R to analyze data sets for a project that aims to determine the leading causes of political crises. 
+                      <br>
+                      Given that I just got this position, I do not have a lot to say about what I have done yet, but I am more than enthusiastic, ready, and willing to get more experience through this position and through meeting the great people on this team. 
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="row" id="company">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank" href="https://www.felicitycbt.com/">
+                    <img class="img-responsive img-circle center-block grow" src="img/felicity.png" width="160px" alt=""></a>
+                    <h2><span>Felicity CBT</span><br>
+                    <small>La Jolla</small><br>
+                    <small>Android Developer</small><br>
+                    <small>Sept. 2018 - Present</small>
+                    </h2>
+                    <p class="lead">
+                      Currently, I am assisting in the development of the company's Android application, implementing UI changes and managing the Firebase database. 
+                      <br>
+                      More specifically, I implemented the app's "<em>reset password</em>" functionality through Firebase, and programmed dynamic UI changes via button presses.
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+
+
             <div class="row" id="company">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
@@ -470,34 +513,6 @@
           <div class="col-lg-3"></div>
         </div>
 
-         <!-- <div class="row" id="skills">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-6 text-center">
-                    <p class="lead">
-                      Java
-                      <br>
-                      HTML/ CSS/ JavaScript
-                      <br>
-                      Android
-                      <br>
-                      Python
-                      <br>
-                      Git
-                      <br>
-                      Tutoring
-                      <br>
-                      Cooperative
-                      <br>
-                      Fast-Learner
-                      <br>
-                      Communication
-                      <br>
-                      Spanish
-                    </p>
-                </div>
-                <div class="col-lg-3"></div>
-          </div> -->
-
             <div class="row" id="skills-list">
               <h2>Technical Skills</h2>
               
@@ -507,6 +522,7 @@
                 <li>Java</li>
                 <li>JavaScript</li>
                 <li>Python</li>
+                <li>Jupyter Notebook</li>
                 <li>R</li>
                 <li>MATLAB</li>
                 <li>HTML</li>
