--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
                     <a target="_blank" href="http://cpass.ucsd.edu/">
-                    <img class="img-responsive img-circle center-block grow" src="img/cpass-logo.JPG" width="160px" alt=""></a>
+                    <img class="img-responsive img-circle center-block grow" src="img/cpass-logo.jpg" width="160px" alt=""></a>
                     <h2><span>Center for Peace and Security Studies</span><br>
                     <small>UC San Diego</small><br>
                     <small>Undergraduate Research Assistant</small><br>
